--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="css/img/favicon.png" rel="icon" type="image/png">
 
-    <link href="//js.arcgis.com/3.19/esri/themes/calcite/dijit/calcite.css" rel="stylesheet" />
-    <link href="//js.arcgis.com/3.19/esri/css/esri.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://openlayers.org/en/v4.1.0/css/ol.css" type="text/css">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="vendor/material-design-icons/iconfont/material-icons.css" rel="stylesheet" />
     <link href="vendor/materialize/dist/css/materialize.min.css" rel="stylesheet" />
@@ -293,8 +292,9 @@
     <script src="vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="vendor/materialize/dist/js/materialize.min.js" type="text/javascript"></script>
     <script src="vendor/sidebar-v2/js/jquery-sidebar.js" type="text/javascript"></script>
-    <script src="//js.arcgis.com/3.19/"></script>
-    <script src="js/incige.js"></script>
+    <script src="//openlayers.org/en/v4.1.0/build/ol.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/dojo/1.11.2/dojo/dojo.js"></script>
+    <script src="js/createMap.js"></script>
     <script src="js/init.js"></script>
     <script src="js/reportes.js" async defer></script>
     <script src="js/mustache-dojo.js" async defer></script>
