Inicio grupos y configuración de las capas necesarias.

--- a/app/index.html
+++ b/app/index.html
@@ -268,7 +268,7 @@
     </div>
     <!-- end #navpane -->
 
-    <div id="extentpane">
+    <div id="extentpane" style="display: none;">
         Escala: <span>1:noInf</span>
     </div>
     <!-- end #extentpane -->
