--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <title>Visor Acueducto TAR PLMB</title>
+    <title>Visor SIGUD</title>
 
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href="css/img/favicon.png" rel="icon" type="image/png">
+    <link href="css/img/favicon.ico" rel="icon" type="image/icon">
 
     <link rel="stylesheet" href="https://openlayers.org/en/v4.1.0/css/ol.css" type="text/css">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
