Se termina leyenda de WMS

--- a/app/index.html
+++ b/app/index.html
@@ -212,7 +212,7 @@
                             </div>
                             <!-- end .card-content -->
                             <div class="card-content">
-                                <div id="legendDiv"></div>
+                                 <ul class="collection" id="legendDiv"></ul>
                             </div>
                             <!-- end .card-content -->
                         </div>
@@ -233,6 +233,7 @@
     <!-- end #sidebar -->
 
     <div id="map" class="sidebar-map"></div>
+    <!-- end #map -->
 
     <!-- Menu -->
     <div id="menu">
