--- a/app/index.html
+++ b/app/index.html
@@ -297,7 +297,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/dojo/1.11.2/dojo/dojo.js"></script>
     <script src="js/createMap.js"></script>
     <script src="js/init.js"></script>
-    <script src="js/reportes.js" async defer></script>
+    <!-- <script src="js/reportes.js" async defer></script> -->
     <script src="js/mustache-dojo.js" async defer></script>
 </body>
 
