Cambio de visibilidad por grupo.

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href="css/img/favicon.ico" rel="icon" type="image/icon">
+    <link href="css/img/faviconcolombia.png" rel="icon" type="image/png">
 
     <link rel="stylesheet" href="https://openlayers.org/en/v4.1.0/css/ol.css" type="text/css">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
