--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,11 @@
             <i class="material-icons">list</i>
           </a>
         </li>
+        <li class="disabled">
+          <a href="#resultados" role="tab" class="tooltipped" data-position="right" data-delay="500" data-tooltip="Resultados">
+            <i class="material-icons">list</i>
+          </a>
+        </li>
         <!-- <li class="disabled">
                     <a href="#messages" role="tab" class="tooltipped" data-position="right" data-delay="500" data-tooltip="Alertas">
                         <i class="material-icons">new_releases</i>
@@ -223,7 +228,27 @@
         </div>
         <!-- end .row -->
       </div>
-      <!-- end #messages -->
+      <!-- end #leyenda -->
+      <div class="sidebar-pane" id="resultados">
+        <div class="row">
+          <div class="col s12">
+            <div class="card teal lighten-5">
+              <div class="card-content">
+                <span class="card-title">Resultados</span>
+              </div>
+              <!-- end .card-content -->
+              <div class="card-content">
+                <ul class="collection" id="resultadosDiv"></ul>
+              </div>
+              <!-- end .card-content -->
+            </div>
+            <!-- end .card .teal .lighten-5 -->
+          </div>
+          <!-- end .col .s12 -->
+        </div>
+        <!-- end .row -->
+      </div>
+      <!-- end #resultados -->
       <div class="sidebar-pane" id="settings">
         <h1 class="sidebar-header">Configuraciones<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
       </div>
