--- a/app/index.html
+++ b/app/index.html
@@ -273,7 +273,7 @@
     <div id="btnP1" title="Medición" class="btn-nav-pane btn-floating btn-small /*btn-large*/ teal dropdown-button btn" onclick="changeNavpane(this, 'pane-medicion');">
       <i class="material-icons">gesture</i>
     </div>
-    <div id="btnP2" title="Identificar" class="btn-nav-pane btn-floating btn-small teal dropdown-button btn" onclick="map.infoWindow.setMap(map);">
+    <div id="btnP2" title="Identificar" class="btn-nav-pane btn-floating btn-small teal dropdown-button btn" onclick="identifyInLayers();">
       <i class="material-icons">search</i>
     </div>
     <div id="btnP3" title="Acercar" class="btn-nav-pane btn-floating btn-small teal dropdown-button btn" onclick="zoomInBox();">
