Se arregla bug? de botón resultados identificar

--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,9 @@
             <i class="material-icons">list</i>
           </a>
         </li>
-        <li class="disabled">
+        <li id="boton-resultados" class="disabled">
           <a href="#resultados" role="tab" class="tooltipped" data-position="right" data-delay="500" data-tooltip="Resultados">
-            <i class="material-icons">list</i>
+            <i class="material-icons">speaker_notes</i>
           </a>
         </li>
         <!-- <li class="disabled">
@@ -214,9 +214,6 @@
             <div class="card teal lighten-5">
               <div class="card-content">
                 <span class="card-title">Leyenda</span>
-              </div>
-              <!-- end .card-content -->
-              <div class="card-content">
                 <div id="info"></div>
                 <ul class="collection" id="legendDiv"></ul>
               </div>
@@ -234,11 +231,10 @@
           <div class="col s12">
             <div class="card teal lighten-5">
               <div class="card-content">
-                <span class="card-title">Resultados</span>
-              </div>
-              <!-- end .card-content -->
-              <div class="card-content">
-                <ul class="collection" id="resultadosDiv"></ul>
+                <span class="card-title">Resultados Identificar</span>
+                <ul class="collection" id="resultadosDiv">
+                  <p>Busque elementos en las capas a través de botón "Identificar".</p>
+                </ul>
               </div>
               <!-- end .card-content -->
             </div>
