Resultados Identificar colapsables.

--- a/app/index.html
+++ b/app/index.html
@@ -232,9 +232,9 @@
             <div class="card teal lighten-5">
               <div class="card-content">
                 <span class="card-title">Resultados Identificar</span>
-                <ul class="collection" id="resultadosDiv">
+                <div id="resultadosDiv">
                   <p>Busque elementos en las capas a través de botón "Identificar".</p>
-                </ul>
+                </div>
               </div>
               <!-- end .card-content -->
             </div>
