--- a/app/index.html
+++ b/app/index.html
@@ -115,15 +115,15 @@
                       </div>
                       <div class="input-field col s6">
                         <select id="buffer_unit">
-                                                      <option value="" disabled>Seleccione la opción</option>
-                                                      <option value="UNIT_METER" selected>Metros</option>
-                                                      <option value="UNIT_KILOMETER">Kilometros</option>
-                                                      <option value="UNIT_STATUTE_MILE">Millas</option>
-                                                      <!-- <option value="UNIT_FOOT">Pies</option>
-                                                      <option value="UNIT_NAUTICAL_MILE">Millas Nauticas</option>
-                                                      <option value="UNIT_US_NAUTICAL_MILE">Millas Nauticas US</option> -->
-                                                      <!-- <option value="UNIT_DEGREE">Grados Sexagesimales</option> -->
-                                                    </select>
+                          <option value="" disabled>Seleccione la opción</option>
+                          <option value="UNIT_METER" selected>Metros</option>
+                          <option value="UNIT_KILOMETER">Kilometros</option>
+                          <option value="UNIT_STATUTE_MILE">Millas</option>
+                          <!-- <option value="UNIT_FOOT">Pies</option>
+                          <option value="UNIT_NAUTICAL_MILE">Millas Nauticas</option>
+                          <option value="UNIT_US_NAUTICAL_MILE">Millas Nauticas US</option> -->
+                          <!-- <option value="UNIT_DEGREE">Grados Sexagesimales</option> -->
+                        </select>
                         <label>Unidades</label>
                       </div>
                       <div class="input-field col s12">
@@ -262,6 +262,19 @@
     <div id="popup-content"></div>
   </div>
   <!-- end #popup -->
+
+  <form id="form-measurement" class="form-inline">
+    <label>Measurement type &nbsp;</label>
+    <select id="type">
+      <option value="length">Length (LineString)</option>
+      <option value="area">Area (Polygon)</option>
+    </select>
+    <label class="checkbox">
+      <input type="checkbox" id="geodesic">
+      use geodesic measures
+    </label>
+  </form>
+  <!-- end #form-measurement -->
 
   <!-- Menu -->
   <div id="menu">
