Capa nivel por filtro.

--- a/app/index.html
+++ b/app/index.html
@@ -279,7 +279,7 @@
   <!-- Menu -->
   <div id="menu">
     <!-- https://design.google.com/icons -->
-    <div id="btnP1" title="Medición" class="btn-nav-pane btn-floating btn-small /*btn-large*/ teal dropdown-button btn" onclick="changeNavpane(this, 'pane-medicion');">
+    <div id="btnP1" title="Medición" class="btn-nav-pane btn-floating btn-small /*btn-large*/ teal dropdown-button btn" onclick="measureInMap();">
       <i class="material-icons">gesture</i>
     </div>
     <div id="btnP2" title="Identificar" class="btn-nav-pane btn-floating btn-small teal dropdown-button btn" onclick="identifyInLayers();">
