Espacios físicos con expresiones regulares para cada piso. Ejemplo

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,11 @@
             <i class="material-icons">speaker_notes</i>
           </a>
         </li>
+        <li>
+          <a href="#acercade" role="tab" class="tooltipped" data-position="right" data-delay="500" data-tooltip="Acerca de">
+            <i class="material-icons">help_outline</i>
+          </a>
+        </li>
         <!-- <li class="disabled">
                     <a href="#messages" role="tab" class="tooltipped" data-position="right" data-delay="500" data-tooltip="Alertas">
                         <i class="material-icons">new_releases</i>
@@ -245,6 +250,39 @@
         <!-- end .row -->
       </div>
       <!-- end #resultados -->
+      <div class="sidebar-pane" id="acercade">
+        <div class="row">
+          <div class="col s12">
+            <div class="card teal lighten-2 ">
+              <div class="card-content white-text">
+                <span class="card-title">Proyecto GIS UD Cirene</span>
+                <h2>Universidad Distrital Francisco José de Caldas</h2>
+                <h5>Oficina Asesora de Sistemas<br> Oficina Asesora de Planeación</h5>
+              </div>
+              <div class="card-action white-text">
+                <p>
+                  <b>Misión</b><br/>
+                  Diseñar y desarrollar un Sistema de Información Geográfica (CIRENE)
+                  para la Planta Física de la Universidad Distrital Francisco José de Caldas,
+                  el cual sea un apoyo para la toma de decisiones del Sistema de Administración
+                  de la Planta Física, con respecto a la administración de espacios e infraestructura.
+                </p>
+                <p>
+                  <b>Visión</b><br/>
+                  CIRENE es un Sistema de Información Geográfica para la Universidad Distrital
+                  Francisco José de Caldas, que posibilita la gestión y administración pertinente
+                  de la planta física de la Universidad,además de otros aspectos relacionados con
+                  la planeación y control de la infraestructura física tales como facilitar las
+                  intervenciones en la infraestructura, uso, ocupación y asignación de espacios,
+                  su relación con diferentes actores y demás aspectos que afectan y transforman el
+                  estado de conservación de la infraestructura física de la Universidad.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end #acercade -->
       <div class="sidebar-pane" id="settings">
         <h1 class="sidebar-header">Configuraciones<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
       </div>
