--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
           <div class="col s12">
             <div class="card teal lighten-5">
               <div class="card-content">
-                <span class="card-title">Reportes</span>
+                <span class="card-title">Reportes (En desarrollo, NO funcional)</span>
               </div>
               <!-- end .card-content -->
               <div class="card-content">
