Add Clean map button

--- a/app/index.html
+++ b/app/index.html
@@ -317,7 +317,7 @@
   <!-- Menu -->
   <div id="menu">
     <!-- https://design.google.com/icons -->
-    <div id="btnP1" title="Medición" class="btn-nav-pane btn-floating btn-small /*btn-large*/ teal dropdown-button btn" onclick="measureInMap();">
+    <div id="btnP1" title="Medición (En desarrollo)" class="btn-nav-pane btn-floating btn-small /*btn-large*/ teal dropdown-button btn" onclick="measureInMap();">
       <i class="material-icons">gesture</i>
     </div>
     <div id="btnP2" title="Identificar" class="btn-nav-pane btn-floating btn-small teal dropdown-button btn" onclick="identifyInLayers();">
@@ -335,7 +335,7 @@
     <div id="btnP6" title="Detener" class="btn-nav-pane btn-floating btn-small teal dropdown-button btn" onclick="cleanNavigationsInteractions();">
       <i class="material-icons">clear</i>
     </div>
-    <div id="btnP7" title="Limpiar" class="btn-nav-pane btn-floating btn-small teal dropdown-button btn" onclick="window.currentGeometry=undefined;map.graphics.clear();">
+    <div id="btnP7" title="Limpiar" class="btn-nav-pane btn-floating btn-small teal dropdown-button btn" onclick="cleanMap();">
       <i class="material-icons">delete</i>
     </div>
   </div>
