Avisos en construcción GIS UD CIRENE

--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
-  <title>Visor SIGUD</title>
+  <title>Visor GIS UD CIRENE (En construcción)</title>
 
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="description" content="GIS UD Cirene es un Sistema de Información Geográfica para la Universidad Distrital
+  Francisco José de Caldas">
   <link href="css/img/faviconcolombia.png" rel="icon" type="image/png">
 
   <link rel="stylesheet" href="https://openlayers.org/en/v4.1.0/css/ol.css" type="text/css">
@@ -262,14 +264,14 @@
               <div class="card-action white-text">
                 <p>
                   <b>Misión</b><br/>
-                  Diseñar y desarrollar un Sistema de Información Geográfica (CIRENE)
+                  Diseñar y desarrollar un Sistema de Información Geográfica (GIS UD Cirene)
                   para la Planta Física de la Universidad Distrital Francisco José de Caldas,
                   el cual sea un apoyo para la toma de decisiones del Sistema de Administración
                   de la Planta Física, con respecto a la administración de espacios e infraestructura.
                 </p>
                 <p>
                   <b>Visión</b><br/>
-                  CIRENE es un Sistema de Información Geográfica para la Universidad Distrital
+                  GIS UD Cirene es un Sistema de Información Geográfica para la Universidad Distrital
                   Francisco José de Caldas, que posibilita la gestión y administración pertinente
                   de la planta física de la Universidad,además de otros aspectos relacionados con
                   la planeación y control de la infraestructura física tales como facilitar las
