Se agrega ícono a las capas con puntos.

--- a/app/index.html
+++ b/app/index.html
@@ -323,7 +323,7 @@
       <i class="material-icons">gesture</i>
     </div>
     <div id="btnP2" title="Identificar" class="btn-nav-pane btn-floating btn-small teal dropdown-button btn" onclick="identifyInLayers();">
-      <i class="material-icons">search</i>
+        <i class="fa fa-info" aria-hidden="true"></i>
     </div>
     <div id="btnP3" title="Acercar" class="btn-nav-pane btn-floating btn-small teal dropdown-button btn" onclick="zoomInBox();">
       <i class="material-icons">zoom_in</i>
