--- a/app/index.html
+++ b/app/index.html
@@ -375,6 +375,7 @@
   <script src="vendor/materialize/dist/js/materialize.min.js" type="text/javascript"></script>
   <script src="vendor/sidebar-v2/js/jquery-sidebar.js" type="text/javascript"></script>
   <script src="//openlayers.org/en/v4.1.0/build/ol.js"></script>
+  <script src="//cdn.rawgit.com/bjornharrtell/jsts/gh-pages/1.2.0/jsts.min.js"></script>
   <script src="js/createMap.js"></script>
   <script src="js/init.js"></script>
   <!-- <script src="js/reportes.js" async defer></script> -->
