Se resaltan las consultas a identificar.

--- a/app/index.html
+++ b/app/index.html
@@ -378,6 +378,7 @@
   <script src="//cdn.rawgit.com/bjornharrtell/jsts/gh-pages/1.2.0/jsts.min.js"></script>
   <script src="js/createMap.js"></script>
   <script src="js/mapTools.js"></script>
+  <script src="js/consultas.js"></script>
   <script src="js/init.js"></script>
   <!-- <script src="js/reportes.js" async defer></script> -->
   <script src="js/mustache-dojo.js" async defer></script>
