--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
   <link href="vendor/materialize/dist/css/materialize.min.css" rel="stylesheet" />
   <link href="vendor/sidebar-v2/css/ol3-sidebar.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
+  <link href="css/generalReport.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -94,129 +95,175 @@
               <div class="card-content">
                 <span class="card-title">Consulta de espacios</span>
               </div>
-              <!-- end .card-content -->
+              <div class="card-tabs">
+                <ul class="tabs tabs-fixed-width teal lighten-5">
+                  <li class="tab"><a class="active" href="#quick-query">Rápida</a></li>
+                  <li class="tab"><a href="#advance-query">Avanzada</a></li>
+                </ul>
+              </div>
               <div class="card-content">
-                <div class="row">
-                  <b>Seleccione una capa:</b>
-                  <form action="#" class="input-field col s12">
-                    <div class="row">
-                      <div class="input-field col s12">
-                        <select id="select_layers">
-                          <option value="" selected>Seleccione la opción</option>
-                        </select>
-                        <label>Capas disponibles</label>
-                      </div>
-                      <!-- end .input-field .col .s12 -->
-                      <b>Forme un tipo de consulta <a href="http://docs.geoserver.org/stable/en/user/tutorials/cql/cql_tutorial.html" target="_blank">filtro cql</a>:</b>
-                      <br />
-                      <div class="row">
-                        <div class="input-field col s4">
-                          <select id="select_fields" class="select_fields">
-                            <option value="" disabled selected>Seleccione</option>
-                          </select>
-                          <label>Campo</label>
-                        </div>
-                        <!-- end .input-field .col .s4 -->
-                        <div class="input-field col s4">
-                          <select id="select_operator">
-                            <option value="" selected>Seleccione</option>
-                            <option value="equals">=</option>
-                            <option value="distinct">&lt;&gt;</option>
-                            <option value="mayor">&gt;</option>
-                            <option value="minor">&lt;</option>
-                            <option value="mayorequals">&gt;=</option>
-                            <option value="minorequals">&lt;=</option>
-                            <option value="minorequals">&lt;=</option>
-                            <option value="like">LIKE</option>
-                            <option value="between">BETWEEN</option>
-                            <option value="in">IN</option>
-                          </select>
-                          <label>Operador</label>
-                        </div>
-                        <!-- end .input-field .col .s4 -->
-                        <div class="input-field col s4">
-                          <!-- <i class="material-icons prefix">select_all</i> -->
-                          <input id="row_value" type="text" class="validate" value="0">
-                          <label for="row_value">Valor</label>
-                        </div>
-                        <!-- end .input-field .col .s4 -->
-                        <div class="input-field col s12">
-                          <span><b>Filtro CQL generado:</b></span>
-                          <div id="cql_filter">...</div>
-                        </div>
-                        <!-- end .input-field .col .s12 -->
-                      </div>
-                      <!-- end .row -->
-                      <div class="input-field col s12">
-                        <button type="button" class="btn waves-effect waves-light grey" type="submit" onclick="generalReport.validateData(event);">
+                <div id="quick-query" action="#" class="row">
+                  <div class="input-field col s12 lefted-div">
+                    <b>Escriba cualquier cosa que desee buscar:</b>
+                  </div>
+                  <!-- end .input-field .col .s12 .lefted-div -->
+                  <div class="input-field col s12">
+                    <i class="material-icons prefix">find_replace</i>
+                    <input id="quick_query" type="text" class="validate" value="">
+                    <label for="quick_query">Valor</label>
+                  </div>
+                  <!-- end .input-field .col .s12 -->
+                  <div class="input-field col s12">
+                    <div id="loading-bar" class="progress" style="display: none;">
+                      <div class="indeterminate"></div>
+                    </div>
+                  </div>
+                  <!-- end .input-field .col .s12 -->
+                  <div class="input-field col s12">
+                    <br />
+                    <div id="quickResultsDiv"></div>
+                  </div>
+                  <!-- end .input-field .col .s12 -->
+                </div>
+                <!-- end div .row -->
+                <div id="advance-query" action="#" class="row">
+                  <div class="input-field col s12 lefted-div">
+                    <b>Seleccione una capa:</b>
+                  </div>
+                  <!-- end .input-field .col .s12 .lefted-div -->
+                  <div class="input-field col s12">
+                    <select id="select_layers">
+                      <option value="" disable selected>Seleccione la opción</option>
+                    </select>
+                    <label>Capas disponibles</label>
+                  </div>
+                  <!-- end .input-field .col .s12 -->
+                  <div class="input-field col s12 lefted-div">
+                    <b>Forme un tipo de consulta <a href="http://docs.geoserver.org/stable/en/user/tutorials/cql/cql_tutorial.html" target="_blank">filtro cql</a>:</b>
+                  </div>
+                  <!-- end .input-field .col .s12 .lefted-div -->
+                  <div class="input-field col s4">
+                    <select id="select_fields" class="select_fields">
+                      <option value="" disabled selected>Seleccione</option>
+                    </select>
+                    <label>Campo</label>
+                  </div>
+                  <!-- end .input-field .col .s4 -->
+                  <div class="input-field col s4">
+                    <select id="select_operator">
+                      <option value="" selected>Seleccione</option>
+                      <option value="equals">=</option>
+                      <option value="distinct">&lt;&gt;</option>
+                      <option value="mayor">&gt;</option>
+                      <option value="minor">&lt;</option>
+                      <option value="mayorequals">&gt;=</option>
+                      <option value="minorequals">&lt;=</option>
+                      <option value="minorequals">&lt;=</option>
+                      <option value="like">LIKE</option>
+                      <option value="between">BETWEEN</option>
+                      <option value="in">IN</option>
+                    </select>
+                    <label>Operador</label>
+                  </div>
+                  <!-- end .input-field .col .s4 -->
+                  <div class="input-field col s4">
+                    <!-- <i class="material-icons prefix">select_all</i> -->
+                    <input id="row_value" type="text" class="validate" value="">
+                    <label for="row_value">Valor</label>
+                  </div>
+                  <!-- end .input-field .col .s4 -->
+                  <div class="input-field col s12 lefted-div">
+                    <b>Agrega una <a href="http://docs.geoserver.org/stable/en/user/filter/function_reference.html#string-functions" target="_blank">función string</a> al campo: (OPCIONAL)</b>
+                  </div>
+                  <!-- end .input-field .col .s12 .lefted-div -->
+                  <div class="input-field col s12">
+                    <select id="select_string_function">
+                      <option value="" selected>Seleccione</option>
+                      <option value="strToUpperCase">Mayúsculas</option>
+                      <option value="strToLowerCase">Minúsculas</option>
+                    </select>
+                    <label>Función String</label>
+                  </div>
+                  <!-- end .input-field .col .s6 -->
+                  <div class="input-field col s12 lefted-div">
+                    <b>O haz un filtro CQL personalizado: (Reemplaza las selecciones anteriores)</b>
+                  </div>
+                  <!-- end .input-field .col .s12 .lefted-div -->
+                  <div class="input-field col s12">
+                    <input id="custom_cql_filter" type="text" class="validate" value="">
+                    <label for="custom_cql_filter">Filtro CQL Personalizado</label>
+                  </div>
+                  <!-- end .input-field .col .s12 -->
+                  <div class="input-field col s12">
+                    <span><b>Filtro CQL generado:</b></span>
+                    <div id="cql_filter">...</div>
+                  </div>
+                  <!-- end .input-field .col .s12 -->
+                  <div class="input-field col s12">
+                    <button type="button" class="btn waves-effect waves-light grey" type="submit" onclick="generalReport.validateData(event);">
                           Consultar
                           <i class="material-icons right">send</i>
                         </button>
-                      </div>
-                      <!-- end .input-field .col .s12 -->
-                      <div id="loading-report" class="input-field col s12" style="display: none;">
-                        <div id="loading-report-message"><b></b></div>
-                        <div class="preloader-wrapper big active">
-                          <div class="spinner-layer spinner-blue">
-                            <div class="circle-clipper left">
-                              <div class="circle"></div>
-                            </div>
-                            <div class="gap-patch">
-                              <div class="circle"></div>
-                            </div>
-                            <div class="circle-clipper right">
-                              <div class="circle"></div>
-                            </div>
-                          </div>
-
-                          <div class="spinner-layer spinner-red">
-                            <div class="circle-clipper left">
-                              <div class="circle"></div>
-                            </div>
-                            <div class="gap-patch">
-                              <div class="circle"></div>
-                            </div>
-                            <div class="circle-clipper right">
-                              <div class="circle"></div>
-                            </div>
-                          </div>
-
-                          <div class="spinner-layer spinner-yellow">
-                            <div class="circle-clipper left">
-                              <div class="circle"></div>
-                            </div>
-                            <div class="gap-patch">
-                              <div class="circle"></div>
-                            </div>
-                            <div class="circle-clipper right">
-                              <div class="circle"></div>
-                            </div>
-                          </div>
-
-                          <div class="spinner-layer spinner-green">
-                            <div class="circle-clipper left">
-                              <div class="circle"></div>
-                            </div>
-                            <div class="gap-patch">
-                              <div class="circle"></div>
-                            </div>
-                            <div class="circle-clipper right">
-                              <div class="circle"></div>
-                            </div>
-                          </div>
+                  </div>
+                  <!-- end .input-field .col .s12 -->
+                  <div id="loading-report" class="input-field col s12" style="display: none;">
+                    <div id="loading-report-message"><b></b></div>
+                    <div class="preloader-wrapper big active">
+                      <div class="spinner-layer spinner-blue">
+                        <div class="circle-clipper left">
+                          <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                          <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                          <div class="circle"></div>
                         </div>
                       </div>
-                      <div class="input-field col s12">
-                        <br />
-                        <div id="generalReportResultsDiv"></div>
+
+                      <div class="spinner-layer spinner-red">
+                        <div class="circle-clipper left">
+                          <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                          <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                          <div class="circle"></div>
+                        </div>
                       </div>
-                      <!-- end .input-field .col .s12 -->
+
+                      <div class="spinner-layer spinner-yellow">
+                        <div class="circle-clipper left">
+                          <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                          <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                          <div class="circle"></div>
+                        </div>
+                      </div>
+
+                      <div class="spinner-layer spinner-green">
+                        <div class="circle-clipper left">
+                          <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                          <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                          <div class="circle"></div>
+                        </div>
+                      </div>
                     </div>
-                    <!-- end .row-->
-                  </form>
-                  <!-- end form -->
+                  </div>
+                  <div class="input-field col s12"> <br />
+                    <div id="generalReportResultsDiv"></div>
+                  </div>
+                  <!-- end .input-field .col .s12 -->
                 </div>
-                <!-- end .row-->
+                <!-- end div .row -->
               </div>
               <!-- end .card-content -->
             </div>
@@ -249,7 +296,7 @@
                   </div>
                   <!-- end #select-chart -->
                   <div id="canvas-holder" style="width:100%">
-                      <canvas id="chart-area" />
+                    <canvas id="chart-area" />
                   </div>
                   <!-- end #canvas-holder -->
                   <div id="ver-en-mapa">
