Consulta rápida terminada.

--- a/app/index.html
+++ b/app/index.html
@@ -113,8 +113,8 @@
                     <label for="quick_query">Valor</label>
                   </div>
                   <!-- end .input-field .col .s12 -->
-                  <div class="input-field col s12">
-                    <div id="loading-bar" class="progress" style="display: none;">
+                  <div id="loading-bar-container" class="input-field col s12" style="display: none;">
+                    <div id="loading-bar" class="progress">
                       <div class="indeterminate"></div>
                     </div>
                   </div>
