--- a/app/index.html
+++ b/app/index.html
@@ -107,12 +107,18 @@
                     <b>Escriba cualquier cosa que desee buscar:</b>
                   </div>
                   <!-- end .input-field .col .s12 .lefted-div -->
-                  <div class="input-field col s12">
+                  <div class="input-field col s10">
                     <i class="material-icons prefix">find_replace</i>
-                    <input id="quick_query" type="text" class="validate" value="">
-                    <label for="quick_query">Valor</label>
+                    <input id="quick_query_value" type="text" class="validate" value="">
+                    <label for="quick_query_value">Valor</label>
                   </div>
-                  <!-- end .input-field .col .s12 -->
+                  <!-- end .input-field .col .s10 -->
+                  <div class="input-field col s2">
+                    <button  id="quick_query_button" class="btn-floating waves-effect waves-light" type="submit" name="action">
+                      <i class="material-icons right">send</i>
+                    </button>
+                  </div>
+                  <!-- end .input-field .col .s2 -->
                   <div id="loading-bar-container" class="input-field col s12" style="display: none;">
                     <div id="loading-bar" class="progress">
                       <div class="indeterminate"></div>
