Se mejora apariencia.

--- a/app/index.html
+++ b/app/index.html
@@ -205,10 +205,10 @@
                   </div>
                   <!-- end .input-field .col .s12 -->
                   <div class="input-field col s12">
-                    <button type="button" class="btn waves-effect waves-light grey" type="submit" onclick="generalReport.validateData(event);">
-                          Consultar
-                          <i class="material-icons right">send</i>
-                        </button>
+                    <button type="button" class="btn waves-effect waves-light" type="submit" onclick="generalReport.validateData(event);">
+                      Consultar
+                      <i class="material-icons right">send</i>
+                    </button>
                   </div>
                   <!-- end .input-field .col .s12 -->
                   <div id="loading-report" class="input-field col s12" style="display: none;">
