--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,11 @@
   Francisco José de Caldas">
   <link href="css/img/faviconcolombia.png" rel="icon" type="image/png">
 
-  <link rel="stylesheet" href="https://openlayers.org/en/v4.1.0/css/ol.css" type="text/css">
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="vendor/material-design-icons/iconfont/material-icons.css" rel="stylesheet" />
-  <link href="vendor/materialize/dist/css/materialize.min.css" rel="stylesheet" />
-  <link href="vendor/sidebar-v2/css/ol3-sidebar.css" rel="stylesheet" />
+  <link href="lib/openlayers/css/ol.css" type="text/css" rel="stylesheet">
+  <link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
+  <link href="lib/material-design-icons/iconfont/material-icons.css" rel="stylesheet" />
+  <link href="lib/materialize/dist/css/materialize.css" rel="stylesheet" />
+  <link href="lib/sidebar-v2/css/ol3-sidebar.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
   <link href="css/generalReport.css" rel="stylesheet" />
 </head>
@@ -473,18 +473,18 @@
   </div>
   <!-- end #modal1 -->
 
-  <script src="vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
-  <script src="vendor/materialize/dist/js/materialize.min.js" type="text/javascript"></script>
-  <script src="vendor/sidebar-v2/js/jquery-sidebar.js" type="text/javascript"></script>
-  <script src="//openlayers.org/en/v4.1.0/build/ol.js"></script>
-  <script src="//cdn.rawgit.com/bjornharrtell/jsts/gh-pages/1.2.0/jsts.min.js"></script>
+  <script src="lib/jquery/dist/jquery.js" type="text/javascript"></script>
+  <script src="lib/materialize/dist/js/materialize.js" type="text/javascript"></script>
+  <script src="lib/sidebar-v2/js/jquery-sidebar.js" type="text/javascript"></script>
+  <script src="lib/openlayers/js/ol.js"></script>
+  <script src="lib/jsts/jsts.min.js"></script>
+  <script src="lib/chart.js/js/Chart.bundle.js"></script>
   <script src="js/createMap.js"></script>
   <script src="js/mapTools.js"></script>
   <script src="js/queries.js"></script>
   <script src="js/generalReport.js"></script>
   <script src="js/reports.js"></script>
   <script src="js/init.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js" async defer></script>
 </body>
 
 </html>
